--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -44,6 +44,9 @@
             <a class="nav-link" href="{{ node_address }}/mine"
               >Request to mine</a
             >
+            <a class="nav-link" href="http://127.0.0.1:9000/learn"
+              >learn</a
+            >
           </li>
         </ul>
       </div>
