--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -47,6 +47,9 @@
             <a class="nav-link" href="http://127.0.0.1:9000/learn"
               >learn</a
             >
+            <a class="nav-link" href="http://127.0.0.1:9000/batch_load"
+              >batch_load</a
+            >
           </li>
         </ul>
       </div>
