--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -21,11 +21,11 @@
       href="{{ url_for('static', filename='css/bootstrap.css')}}"
     />
 
-    <title>FileStore</title>
+    <title>Storj-Local</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Blockchain</a>
+      <a class="navbar-brand" href="#">Storj-Sim</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -45,13 +45,13 @@
               >Request to mine</a
             >
             <a class="nav-link" href="http://127.0.0.1:9000/learn"
-              >learn</a
+              >Learn</a
             >
             <a class="nav-link" href="http://127.0.0.1:9000/switch"
-              >switch</a
+              >Switch</a
             >
             <a class="nav-link" href="http://127.0.0.1:9000/batch_load"
-              >batch_load</a
+              >Batch load</a
             >
           </li>
         </ul>
